add 'api' prefix to all endpoints